tests/snapshots/gql_snapshots__parse_property_filter_multiple_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties:
              - - name
                - String: Alice
              - - age
                - Int: 30
              - - active
                - Bool: true
optional_match_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
