tests/snapshots/gql_snapshots__parse_property_filter_number_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties:
              - - age
                - Int: 30
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
order_clause: ~
limit_clause: ~
