tests/snapshots/gql_snapshots__parse_return_alias_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: n
          property: name
      alias: personName
group_by_clause: ~
order_clause: ~
limit_clause: ~
