tests/snapshots/gql_snapshots__parse_return_distinct_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
where_clause: ~
return_clause:
  distinct: true
  items:
    - expression:
        Property:
          variable: n
          property: city
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
