tests/snapshots/gql_snapshots__parse_return_literal_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Literal:
          String: constant
      alias: ~
    - expression:
        Literal:
          Int: 42
      alias: ~
    - expression:
        Literal:
          Bool: true
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
