tests/snapshots/gql_snapshots__parse_return_property_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
optional_match_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: n
          property: name
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
